<resources>
    <string name="app_name">Weather</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_setting">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visibility">Visibility</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="cloud">Cloud\n</string>
    <string name="wind">Wind</string>
    <string name="zero">zero</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="save_location">Save Location</string>
    <string name="add_location">Add Location</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="language">Language</string>
    <string name="c">°C</string>
    <string name="f">°F</string>
    <string name="k">°K</string>
    <string name="MeterPerSecond">m/s</string>
    <string name="MilePerHour">mm/h</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="add_date">Add Date</string>
    <string name="time">Time</string>
    <string name="add_time">Add Time</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="save">Sava</string>
    <string name="places_cancel">Cancel</string>
    <string name="setup_alert">Setup Alert</string>
    <string name="cityname" >City Name</string>
    <string name="temp" >30</string>
    <string name="location">Location</string>
    <string name="temperature">Temperature</string>
    <string name="map">map</string>
    <string name="gps">gps</string>
    <string name="english">english</string>
    <string name="arabic">arabic</string>
    <string name="fahrenheit">fahrenheit</string>
    <string name="kelvin">kelvin</string>
    <string name="celsius">celsius</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="slash">/</string>
    <string name="weather_alarm">Weather Alarm</string>
    <string name="features">Allow Weather to Access Features</string>
    <string name="ok">Ok</string>
    <string name="alert_added_successfully">Alert Added Successfully</string>
    <string name="enter_date_time">Enter date time</string>
    <string name="info">Info</string>
    <string name="no_alert_weather_is_fine">"No Alert Weathe Is Fine "</string>
    <string name="country">Country</string>
    <string name="alarm_description">Alarm Description</string>
    <string name="checkInternet">"Please Check your Internet Connection "</string>
</resources>
