<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.weatherapp.home.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.weatherapp.favorite.view.FavoriteFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.example.weatherapp.settings.view.SetttingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/alertFragment"
        android:name="com.example.weatherapp.alert.view.AlertFragment"
        android:label="@string/title_alarm"
        tools:layout="@layout/fragment_alert" />
</navigation>