<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textView9"
        style="@style/custom_textView"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        style="@style/custom_textView"
        android:layout_width="146dp"
        android:layout_height="46dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/to"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_from"
        style="@style/custom_textView"
        android:layout_width="140dp"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:elevation="20dp"
        app:cardBackgroundColor="@color/secondary"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toStartOf="@+id/card_to"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <TextView
            android:id="@+id/from_date"
            style="@style/custom_textView"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="@string/add_date"
            android:padding="3dp"
            android:textColor="@color/primary"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_to"
        style="@style/custom_textView"
        android:layout_width="140dp"
        android:layout_gravity="center"
        android:layout_marginEnd="12dp"
        android:clickable="true"
        android:elevation="20dp"
        app:cardBackgroundColor="@color/secondary"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_from"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/card_from"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/to_date"
            style="@style/custom_textView"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="@string/add_date"
            android:padding="3dp"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/textView2"
        style="@style/custom_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/time"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_time"
        style="@style/custom_textView"
        android:layout_width="269dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:elevation="20dp"
        app:cardBackgroundColor="@color/secondary"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/time"
            style="@style/custom_textView"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="@string/add_time"
            android:padding="5dp"
            android:textColor="#676666"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/radioGroupChooseAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:checkedButton="@+id/radio_button_1"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/card_time">

        <RadioButton
            android:id="@+id/radio_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/alarm"
            android:textColor="@color/primary"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:buttonTint="@color/primary"
            android:text="@string/notification"
            android:textSize="16sp" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toEndOf="@id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupChooseAlarm"
        app:layout_constraintVertical_bias="0.17" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/places_cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSave"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupChooseAlarm"
        app:layout_constraintVertical_bias="0.17" />

</androidx.constraintlayout.widget.ConstraintLayout>